--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "superagent": "^5.0.5"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
-    "mocha": "^6.1.4",
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "mocha": "^6.1.4"
   }
 }
